Fix navigation links on mobile

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -10,8 +10,20 @@
 
 
 
-html,
-body,
+html {
+    height: -moz-available;
+    height: -webkit-fill-available;
+    height: fill-available;
+}
+
+body {
+    min-height: 100vh;
+    height: -moz-available;
+    min-height: -webkit-fill-available;
+    min-height: fill-available;
+}
+
+
 main,
 #___gatsby,
 #gatsby-focus-wrapper {
